# CppML

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
CppML/: CppML.sln
CppML/CppML/: CppML.cpp  CppML.vcxproj  CppML.vcxproj.filters  NDArray.hpp
include/: NDArray.hpp
include/BWMLLib/: BWMLLib.h  LinReg.h  LogReg.h
src/: CppML.cpp  LingReg.cpp
tests/: testNDArray.cpp
